--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jaxb2-maven-plugin</artifactId>
-				<version>1.6</version>
+				<version>2.3.1</version>
 				<executions>
 					<execution>
 						<id>xjc</id>
@@ -67,6 +67,7 @@
 					<schemaDirectory>${project.basedir}/src/main/resources</schemaDirectory>
 					<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
 					<clearOutputDir>false</clearOutputDir>
+				    <noGeneratedHeaderComments>true</noGeneratedHeaderComments>
 				</configuration>
 			</plugin>
 		</plugins>
